test-framework/sudo-compliance-tests/src/sudo/flag_list/short_format/snapshots/user_non_unix_group_id_runas.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/short_format/mod.rs
expression: stdout
---
User ferruccio may run the following commands on container:
    (root) NOPASSWD: /tmp
    (%:#0) ALL
